--- a/ui/EnglishPractice.ui
+++ b/ui/EnglishPractice.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>732</width>
+    <width>547</width>
     <height>384</height>
    </rect>
   </property>
@@ -19,7 +19,7 @@
      <item>
       <widget class="QTabWidget" name="tabWidget">
        <property name="styleSheet">
-        <string notr="true">color:saddlebrown;</string>
+        <string notr="true"/>
        </property>
        <property name="currentIndex">
         <number>0</number>
@@ -345,7 +345,7 @@
         <attribute name="title">
          <string>Settings</string>
         </attribute>
-        <layout class="QHBoxLayout" name="horizontalLayout_6">
+        <layout class="QHBoxLayout" name="horizontalLayout_15">
          <item>
           <layout class="QVBoxLayout" name="verticalLayout_8">
            <item>
@@ -429,6 +429,9 @@
                    </item>
                    <item>
                     <widget class="QRadioButton" name="radioButton_2">
+                     <property name="layoutDirection">
+                      <enum>Qt::LeftToRight</enum>
+                     </property>
                      <property name="text">
                       <string>Review</string>
                      </property>
@@ -461,7 +464,7 @@
                    <item>
                     <widget class="QCheckBox" name="checkBox_2">
                      <property name="text">
-                      <string>UpdateInReview</string>
+                      <string>updateEBHS</string>
                      </property>
                     </widget>
                    </item>
@@ -497,9 +500,6 @@
          </item>
          <item>
           <layout class="QVBoxLayout" name="verticalLayout_6">
-           <property name="rightMargin">
-            <number>165</number>
-           </property>
            <item>
             <widget class="QGroupBox" name="groupBox_3">
              <property name="title">
@@ -654,6 +654,37 @@
               </item>
              </layout>
             </widget>
+           </item>
+           <item>
+            <layout class="QHBoxLayout" name="horizontalLayout_6">
+             <item>
+              <widget class="QPushButton" name="pushButton_8">
+               <property name="text">
+                <string>Load</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <spacer name="horizontalSpacer">
+               <property name="orientation">
+                <enum>Qt::Horizontal</enum>
+               </property>
+               <property name="sizeHint" stdset="0">
+                <size>
+                 <width>40</width>
+                 <height>20</height>
+                </size>
+               </property>
+              </spacer>
+             </item>
+             <item>
+              <widget class="QPushButton" name="pushButton_7">
+               <property name="text">
+                <string>Save</string>
+               </property>
+              </widget>
+             </item>
+            </layout>
            </item>
            <item>
             <spacer name="verticalSpacer_2">
