通过 ui 文件为听力跳过广告(F2)和暂停视频(F1)加入快捷键

--- a/ui/EnglishPractice.ui
+++ b/ui/EnglishPractice.ui
@@ -333,14 +333,20 @@
            <item>
             <widget class="QPushButton" name="pushButton_10">
              <property name="text">
-              <string>Skip Ads</string>
+              <string>[F2] Skip Ads</string>
+             </property>
+             <property name="shortcut">
+              <string>F2</string>
              </property>
             </widget>
            </item>
            <item>
             <widget class="QPushButton" name="pushButton_9">
              <property name="text">
-              <string>Space</string>
+              <string>[F1] Space</string>
+             </property>
+             <property name="shortcut">
+              <string>F1</string>
              </property>
             </widget>
            </item>
