复习模式加入 Once more 按钮

--- a/ui/EnglishPractice.ui
+++ b/ui/EnglishPractice.ui
@@ -54,6 +54,13 @@
              </property>
             </widget>
            </item>
+           <item>
+            <widget class="QPushButton" name="pushButton_13">
+             <property name="text">
+              <string>Once more</string>
+             </property>
+            </widget>
+           </item>
           </layout>
          </item>
          <item>
