为 Ebbinghaus 加入 Marked 标记

--- a/ui/EnglishPractice.ui
+++ b/ui/EnglishPractice.ui
@@ -59,6 +59,19 @@
            </property>
           </widget>
          </item>
+         <item>
+          <widget class="QCheckBox" name="checkBox_3">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="text">
+            <string>Mark</string>
+           </property>
+          </widget>
+         </item>
         </layout>
        </item>
        <item>
