--- a/ui/EnglishPractice.ui
+++ b/ui/EnglishPractice.ui
@@ -914,6 +914,13 @@
                   </widget>
                  </item>
                  <item>
+                  <widget class="QCheckBox" name="checkBox_4">
+                   <property name="text">
+                    <string>MarkedOnly</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
                   <widget class="QLabel" name="label_13">
                    <property name="text">
                     <string/>
