--- a/ui/EnglishPractice.ui
+++ b/ui/EnglishPractice.ui
@@ -1469,6 +1469,12 @@
                             </item>
                             <item>
                              <widget class="QTextEdit" name="textEdit_34">
+                              <property name="minimumSize">
+                               <size>
+                                <width>130</width>
+                                <height>0</height>
+                               </size>
+                              </property>
                               <property name="maximumSize">
                                <size>
                                 <width>100</width>
@@ -3020,7 +3026,7 @@
                        <widget class="QTextEdit" name="textEdit_63">
                         <property name="minimumSize">
                          <size>
-                          <width>600</width>
+                          <width>900</width>
                           <height>39</height>
                          </size>
                         </property>
