--- a/ui/EnglishPractice.ui
+++ b/ui/EnglishPractice.ui
@@ -174,6 +174,7 @@
             <font>
              <family>Arial Rounded MT Bold</family>
              <pointsize>25</pointsize>
+             <weight>75</weight>
              <bold>true</bold>
             </font>
            </property>
@@ -3856,21 +3857,21 @@
               </item>
              </layout>
             </item>
-            <item>
-             <spacer name="verticalSpacer">
-              <property name="orientation">
-               <enum>Qt::Vertical</enum>
-              </property>
-              <property name="sizeHint" stdset="0">
-               <size>
-                <width>20</width>
-                <height>40</height>
-               </size>
-              </property>
-             </spacer>
-            </item>
            </layout>
           </widget>
+         </item>
+         <item>
+          <spacer name="verticalSpacer_32">
+           <property name="orientation">
+            <enum>Qt::Vertical</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>20</width>
+             <height>40</height>
+            </size>
+           </property>
+          </spacer>
          </item>
         </layout>
        </item>
