--- a/ui/EnglishPractice.ui
+++ b/ui/EnglishPractice.ui
@@ -4040,6 +4040,9 @@
           </widget>
          </item>
          <item>
+          <widget class="QLineEdit" name="lineEdit_5"/>
+         </item>
+         <item>
           <layout class="QHBoxLayout" name="horizontalLayout_6">
            <item>
             <widget class="QPushButton" name="pushButton_8">
